--- a/app4.tex
+++ b/app4.tex
@@ -82,6 +82,7 @@
 \acro{OTU}{\textit{Optical Channel Transport Unit}}
 \acro{OH}{\textit{overhead}}
 \acro{OXC}{\textit{Optical Cross-Connect}}
+\acro{PDH}{\textit{Plesiochronous Digital Hierarchy}}
 \acro{POH}{\textit{Path Overhead}}
 \acro{POLSK}{\textit{Polarization-shift Keying}}
 \acro{PM}{\textit{Path Monitoring}}
