revisao parcial das referencias

--- a/referencias.bib
+++ b/referencias.bib
@@ -1,12 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-@MISC{rudge,
-Title = {{Slides da Disciplina de Redes Opticas}},
-Author = {Felipe Rudge},
-howpublished = {\url{http://www.dsif.fee.unicamp.br/~rudge/pdf/IE008-b2_SDH-PDH_Eth=f215_vF-up.pdf}},
-note = {Acesso em 17/06/15}
-}
 
 @Book{agrawal2005lightwave,
   Title                    = {{Lightwave technology: telecommunication systems}},
@@ -98,16 +92,17 @@ note = {Acesso em 17/06/15}
   Keywords                 = {Books;Manufacturing;Multiplexing;Optical fiber networks;Optical fibers;Optical interconnections;Proposals;SONET;Standardization;Synchronous digital hierarchy}
 }
 
-@Misc{Barlow2004,
+@Misc{Barlow2014,
   Title                    = {{A G.709 Optical Transport Network Tutorial}},
 
   Author                   = {Guylain Barlow},
-  Note                     = {{\'}Ultimo acesso em fevereiro de 2010},
-  Year                     = {2004},
+  HowPublished             = {White Paper},
+  Month                    = dec,
+  Note                     = {Acesso em junho de 2015},
+  Year                     = {2014},
 
   Owner                    = {Alaelson},
-  Timestamp                = {2010.02.19},
-  Url                      = {http://www.jdsu.com/product-literature/g709otn\_wp\_opt\_tm\_ae.pdf}
+  Url                      = {http://www.jdsu.com/ProductLiterature/g709otntutor_wp_tfs_tm_ae.pdf}
 }
 
 @Misc{BernalFilho2003,
@@ -170,6 +165,18 @@ note = {Acesso em 17/06/15}
   Keywords                 = {WDM optical fibre communication;channel separation;cross-phase modulation effect;fiber dispersion;fiber length;intensity modulation-direct detection WDM systems;modulation frequency;pump modulation frequency;very low frequency;walkoff effect;wavelength-division multiplexing systems;optical fibre communication;optical fibre theory;optical modulation;optical pumping;wavelength division multiplexing;}
 }
 
+@Misc{Cisco2015,
+  Title                    = {Cisco Visual Networking Index: Forecast and Methodology (2014-2019)},
+
+  Author                   = {Cisco},
+  HowPublished             = {White Paper},
+  Year                     = {2015},
+
+  Owner                    = {alaelson},
+  Timestamp                = {2015.06.22},
+  Url                      = {http://www.cisco.com/c/en/us/solutions/collateral/service-provider/ip-ngn-ip-next-generation-network/white_paper_c11-481360.pdf}
+}
+
 @InProceedings{Costa2007,
   Title                    = {{Influence of Dispersion Compensation Granularity on the XPM-Induced Degradation in NRZ-IM-DD WDM Links at 10 Gbit/s per Channel with 50 GHz of Channel Spacing}},
   Author                   = {Costa, N.M.S. and Alves, T.M.F. and Cartaxo, A.V.T.},
@@ -212,7 +219,7 @@ note = {Acesso em 17/06/15}
 }
 
 @Book{Diogenes2004,
-  Title                    = {CertificaÃ§Ã£o Cisco. Rio de Janeiro: Axcel Books},
+  Title                    = {Certificação Cisco. Rio de Janeiro: Axcel Books},
   Author                   = {Diogenes, Yuri},
   Year                     = {2004}
 }
@@ -244,7 +251,7 @@ note = {Acesso em 17/06/15}
 
   Author                   = {Roberto Gendron and Amato Gidaro},
   Month                    = oct,
-  Note                     = {ï¿½ltimo acesso em fevereiro de 2010},
+  Note                     = {Acesso em fevereiro de 2010},
   Year                     = {2006},
 
   Address                  = {Almonte, ON, Canadï¿½},
@@ -254,17 +261,19 @@ note = {Acesso em 17/06/15}
   Url                      = {http://documents.exfo.com/appnotes/anote153-ang.pdf}
 }
 
-@Misc{Gorshe2009,
+@Misc{Gorshe2011,
   Title                    = {{A Tutorial on ITU-T G.709 Optical Transport Network (OTN)}},
 
   Author                   = {Steve Gorshe},
-  Month                    = jul,
-  Note                     = {ï¿½ltimo acesso em fevereiro de 2010},
-  Year                     = {2009},
+  HowPublished             = {White Paper},
+  Month                    = jun,
+  Note                     = {Acesso em junho de 2015},
+  Year                     = {2011},
 
+  Comment                  = {Issue No. 2: June 2011},
   Owner                    = {Alaelson},
   Timestamp                = {2010.02.24},
-  Url                      = {http://www.pmc-sierra.com/whitepaper-processor-mips-sonet-ethernet/otn/index.html}
+  Url                      = {https://pmcs.com/cgi-bin/download/download.pl?res_id=159741}
 }
 
 @Book{Haykin2001,
@@ -613,6 +622,14 @@ note = {Acesso em 17/06/15}
   Timestamp                = {2010.02.24}
 }
 
+@Misc{rudge,
+  Title                    = {{Slides da Disciplina de Redes Opticas}},
+
+  Author                   = {Felipe Rudge},
+  HowPublished             = {\url{http://www.dsif.fee.unicamp.br/~rudge/pdf/IE008-b2_SDH-PDH_Eth=f215_vF-up.pdf}},
+  Note                     = {Acesso em 17/06/15}
+}
+
 @InProceedings{Sanchez-Lopez2005,
   Title                    = {{A Hierarchical Routing Approach for GMPLS Based Control Plane for ASON}},
   Author                   = {S{\'a}nchez-L{\'o}pez, S. and Masip-Bruin, X. and Mar{\'\i}n-Tordera, E. and Sol{\'e}-Pareta, J. and Domingo-Pascual, J.},
@@ -644,7 +661,7 @@ note = {Acesso em 17/06/15}
 
   Author                   = {Timothy P. Walker},
   Month                    = dec,
-  Note                     = {{\'}Utimo acesso em 19 de fevereiro de 2010},
+  Note                     = {Acesso em junho de 2015},
   Year                     = {2007},
 
   Abstract                 = {This is a Tutorial. This is NOT a Recommendation! This tutorial has no standards significance. It is purely for educational purposes. In case of conflict between the material contained in the tutorial and the material of the relevant Recommendation the latter always prevails. This tutorial should NOT be used as a reference; only the relevant Recommendations can be referenced. Summary This document provides a tutorial for Optical Transport Network standards and their applications. The objective is to provide the telecommunications engineers with a document that forms the basis for understanding OTN.},
@@ -652,7 +669,7 @@ note = {Acesso em 17/06/15}
   Location                 = {http://www.scientificcommons.org/42549037},
   Owner                    = {Alaelson},
   Timestamp                = {2010.02.19},
-  Url                      = {http://www.itu.int/itu-t/studygroups/com15/otn/otntutorial.pdf}
+  Url                      = {https://www.itu.int/ITU-T/studygroups/com15/otn/OTNtutorial.pdf}
 }
 
 @Article{Zang2000,
