--- a/app4.tex
+++ b/app4.tex
@@ -136,4 +136,6 @@
 %\acro{WRON}{Wavelength Routed Optical Network}
 %\acro{WRS}{Wavelength Routing Switch}
 \acro{XPM}{\textit{Cross-Phase Modulation}}
+\acro{SDN}{\textit{Software Defined Networking}}
+\acro{IPTV}{\textit{Internet Protocol Television}}
 \end{acronym}
