--- a/cap1.tex
+++ b/cap1.tex
@@ -1,7 +1,7 @@
 \chapter{Introdução}
 \label{cap:introduction}
 
-As redes de comunicações de dados continua em acelerado crescimento, impulsionado pelo tráfego gerado por serviços de vídeo sob demanda, \ac{IPTV} pelos, compartilhamentos de arquivos, e principalmente pelo ``boom'' de dispositivos móveis conectados à Internet. De acordo com a Cisco Visual Networking Index~\cite{Cisco2015}, o tráfego global da Internet irá alcançar 1.1 zettabytes/ano ou 88.4 exabytes/mês até 2016, e praticamente dobra até 2019. Dessa forma, para que se possa acomodar tais taxas de crescimento, as redes de comunicações óticas multiplexadas por divisão de comprimento de onda (\aclu{WDM} -- \ac{WDM}) continuam sendo a tecnologia mais importante devido a sua altíssima capacidade de transmissão e longo alcance, além de outras propriedades.
+As redes de comunicações de dados continuam em acelerado crescimento, impulsionado pelo tráfego gerado por serviços de vídeo sob demanda, \ac{IPTV} pelos, compartilhamentos de arquivos, e principalmente pelo ``\textit{boom}'' de dispositivos móveis conectados à Internet. De acordo com a \textit{Cisco Visual Networking Index}~\cite{Cisco2015}, o tráfego global da Internet irá alcançar 1.1 zettabytes/ano ou 88.4 exabytes/mês até 2016, e praticamente dobra até 2019. Dessa forma, para que se possa acomodar tais taxas de crescimento, as redes de comunicações óticas multiplexadas por divisão de comprimento de onda (\aclu{WDM} -- \ac{WDM}) continuam sendo a tecnologia mais importante devido a sua altíssima capacidade de transmissão e longo alcance, além de outras propriedades.
 
 Para dar suporte as redes \ac{WDM}, faz-se necessário o contínuo desenvolvimento das tecnologias de comunicações óticas, de seus protocolos de transporte, controle eficiente da rede além de técnicas de resiliência e sobrevivência em caso de falhas.
 
