--- a/cap2.tex
+++ b/cap2.tex
@@ -21,7 +21,7 @@ Por volta da década de 1970, a infraestrutura de transporte baseava-se em \ac{PD
 \label{tab:PDH}}
 \end{table}
 
-\begin{enumerate}
+\begin{itemize}
 
 
 \item {\bf Preenchimento de pacotes:} como cada terminal opera com um relógio individual ligeiramente próximo dos demais, pode ocorrer diferenças significativas entre dois relógios. Assim, antes de realizar a intercalação é preciso manter os enlaces no mesmo ritmo, o que é feito adicionando bit sem informação (bits vazios) que servem para  compensar diferenças de relógio, bits estes descartados na demultiplexação.
@@ -31,7 +31,7 @@ Por volta da década de 1970, a infraestrutura de transporte baseava-se em \ac{PD
 \item {\bf Compatibilidade:} a falta de descrição do formato de transmissão no meio implicava no desenvolvimento de diferentes formatos de codificação e interfaceamento, levando a um problema de incompatibilidade entre equipamentos de diferentes desenvolvedores.
 \item {\bf Disponibilidade da rede:} o tempo de restauração de falhas com o protocolo PDH variava entre segundos até minutos, valor muito superior aos protocolos sucessores.
 
-\end{enumerate}
+\end{itemize}
 
 \subsection{Multiplexação PDH}
 
