--- a/cap2.tex
+++ b/cap2.tex
@@ -1,13 +1,23 @@
-\chapter{Tecnologia de Transporte}
+\chapter{Tecnologia Transporte}
 \label{cap:technology}
 
-\section{PDH}
+\section{Hierarquia Digital Plesiócrona - PDH}
 \label{sec:pdh}
 
-Por volta da década de 1970, a infraestrutura de transporte baseava-se em \ac{PDH}. O PDH é um protocolo de comunicação tradicionalmente desenvolvido para telefonia e que permite o envio de vários sinais sobre o mesmo meio, seja cabo coaxial ou fibra óptica, utilizando técnicas de multiplexação no tempo e dados em formato digital. O termo plesiocróno se refere ao fato de que as diferentes terminações da rede operam com relógio quase que sincronizados. Como o foco das pesquisas naquele momento estava na comunicação de voz, demandava-se uma largura de banda de 8 kHz para comunicação bilateral, o que a 8 bits por amostra implicava na digitalização a uma taxa de 64 kb/s. Este valor tornou-se padrão e as transmissões de valores superiores foram niveladas em múltiplos desse, conforme destacado na tabela \ref{tab:PDH}, na qual observa-se as taxas padronizadas na hierarquia. Porém, PDH sofria de muitos problemas, o que impulsionou pesquisas de um novo padrão de multiplexação que se consagrou na forma de \ac{SONET} e \ac{SDH}. As principais limitações do PDH, naquele momento eram:
+Por volta da década de 1970, a infraestrutura de transporte baseava-se na tecnologia \aclu{PDH}. O PDH é um protocolo de comunicação tradicionalmente desenvolvido para telefonia e que permite o envio de vários sinais sobre o mesmo meio, seja cabo coaxial ou fibra óptica, utilizando técnicas de multiplexação no tempo e dados em formato digital. O termo \textbf{plesiocróno} se refere ao fato de que as diferentes terminações da rede operam com relógio quase sincronizados. Como o foco das pesquisas naquele momento estava na comunicação de voz, demandava-se uma largura de banda de $8~KHz$ para comunicação bilateral, com 8 bits por amostra que implica na digitalização a uma taxa de $64~Kbps$. Este valor tornou-se padrão e as transmissões de valores superiores foram niveladas em múltiplos desse, conforme destacado na Tabela \ref{tab:pdh}, na qual observa-se as taxas padronizadas na hierarquia. Porém, \ac{PDH} sofria de muitos problemas, o que impulsionou pesquisas de um novo padrão de multiplexação que se consagrou na forma de \ac{SONET} e \ac{SDH}. As principais limitações do \ac{PDH} são:
 
-\begin{table}[!htb]
+\begin{enumerate}
+	\item {\bf Preenchimento de pacotes:} como cada terminal opera com um relógio individual ligeiramente próximo dos demais, pode ocorrer diferenças significativas entre dois relógios. Assim, antes de realizar a intercalação é preciso manter os enlaces no mesmo ritmo, o que é feito adicionando bit sem informação (bits vazios) que servem para  compensar diferenças de relógio, bits estes descartados na demultiplexação.
+	\item {\bf Extração de níveis inferiores:} Há uma dificuldade para se extrair um sinal de ordem inferior de um de ordem superior, sem demultiplexar os passos intermediários, ou seja, para extrair o sinal de um enlace em determinado ponto era necessário uma demultiplexação sucessiva até o ponto desejado seguida de uma remultiplexação para reenvio do sinal.
+	\item {\bf Gerenciamento:} falta de informações de gerenciamento da rede, monitoramento, identificação de conectividade, relatório de falhas, além de um caminho de comunicação de dados para transporte dessas informações. Isso ocorria devido a limitação de taxa transportada que não permitia alocação bits para essas funções.
+	\item {\bf Compatibilidade:} a falta de descrição do formato de transmissão no meio implicava no desenvolvimento de diferentes formatos de codificação e interfaceamento, levando a um problema de incompatibilidade entre equipamentos de diferentes fornecedores.
+	\item {\bf Disponibilidade da rede:} o tempo de recuperação de falhas variava entre segundos até minutos, valor muito superior aos protocolos sucessores.
+\end{enumerate}
+
+\begin{table}[!h]
 \centering
+\caption{Taxas de transmissão da tecnologia \ac{PDH} padronizadas na América do Norte, Europa e Japão~\cite{Ramaswami2010}.
+\label{tab:pdh}}
 \begin{tabular}{c|c|c|c}
 \hline
 {\bf Nível} & {\bf América do Norte} & {\bf Europa} & {\bf Japão} \\ \hline
@@ -17,34 +27,168 @@ Por volta da década de 1970, a infraestrutura de transporte baseava-se em \ac{PD
 3 & 44.736 Mb/s & 34.368 Mb/s & 32.064 Mb/s \\
 4 & 139.264 Mb/s & 139.264 Mb/s & 97.728 Mb/s \\ \hline
 \end{tabular}
-\caption{Taxas de transmissão para PDH~\cite{Ramaswami2010} 
-\label{tab:PDH}}
 \end{table}
 
-\begin{enumerate}
 
+%\subsection{Multiplexação PDH}
 
-\item {\bf Preenchimento de pacotes:} como cada terminal opera com um relógio individual ligeiramente próximo dos demais, pode ocorrer diferenças significativas entre dois relógios. Assim, antes de realizar a intercalação é preciso manter os enlaces no mesmo ritmo, o que é feito adicionando bit sem informação (bits vazios) que servem para  compensar diferenças de relógio, bits estes descartados na demultiplexação.
+O termo multiplexação define a tarefa de enviar dois ou mais sinais utilizando o mesmo meio de transmissão. Isso pode ser obtido de diversas maneiras, por exemplo, pela divisão do tempo de acesso ao meio em períodos de tempos (\textit{time slots}) para cada usuário transmitir.
 
-\item {\bf Extração de níveis inferiores:} outra limitação era a dificuldade de extrair um sinal de ordem inferior de um de ordem superior, sem demultiplexar os passos intermediários, ou seja, para extrair o sinal de um enlace em determinado ponto era necessário uma demultiplexação sucessiva até o ponto desejado seguida de uma remultiplexação para reenvio do sinal.
-\item {\bf Gerenciamento:} PDH não incorporava informações de gerenciamento da rede, monitoramento e identificação de conectividade, relatório de falhas ou um caminho de comunicação de dados para transporte dessas informações. Isso ocorria devido a limitação de taxa transportada que não permitia alocação bits para essas funções.
-\item {\bf Compatibilidade:} a falta de descrição do formato de transmissão no meio implicava no desenvolvimento de diferentes formatos de codificação e interfaceamento, levando a um problema de incompatibilidade entre equipamentos de diferentes desenvolvedores.
-\item {\bf Disponibilidade da rede:} o tempo de restauração de falhas com o protocolo PDH variava entre segundos até minutos, valor muito superior aos protocolos sucessores.
-
-\end{enumerate}
-
-\subsection{Multiplexação PDH}
-
-O termo multiplexação define a tarefa de enviar dois ou mais sinais utilizando o mesmo meio de transmissão. Isso pode ser obtido de diversas maneiras, como, por exemplo, divisão do tempo de acesso ao meio em turnos para cada usuário transmitir.
-
-O PDH utiliza uma multiplexação assíncrona, na qual cada terminal tem seu próprio \textit{clock}, levando a imprecisões entre as suas taxas de funcionamento, mesmo quando adotada um \textit{clock} nominal. Assim, para que haja correção nessas pequenas diferenças, deve ser inserir bits nos fluxos. Para que seja possível se captar um fluxo mais lento de informação multiplexado num fluxo mais rápido, é necessário uma estrutura chamada ``montanha de multiplexadores'' (ver Figura \ref{fig:muxPDH}), o que eleva o custo e complexidade das redes que usam esse tipo. A tabela \ref{tab:PDH} mostra a nomenclatura da hierarquia de níveis de taxa de transmissão.
+O \ac{PDH} utiliza uma multiplexação assíncrona, na qual cada terminal tem seu próprio \textit{clock}, levando a imprecisões entre as suas taxas de funcionamento, mesmo quando adotada um \textit{clock} nominal. Assim, para que haja correção nessas pequenas diferenças, deve ser inserir bits nos fluxos. Para que seja possível se captar um fluxo mais lento de informação multiplexado num fluxo mais rápido, é necessário uma estrutura chamada ``montanha de multiplexadores'' (ver Figura~\ref{fig:muxPDH}), o que elevava o custo e complexidade das redes. 
 
 \begin{figure}[!htb]
 \centering
-\includegraphics[width=.9\textwidth]{image/mux_pdh.eps}
+\includegraphics[width=.7\textwidth]{image/mux_pdh.eps}
 \caption{\label{fig:muxPDH} Estrutura de multiplexação PDH: a ``montanha de multiplexadores''. Adaptado de \cite{Ramaswami2010}.}
 \end{figure}
 
 \section{SONET/SDH}
 \label{sec:sdh}
-\input{sectionSonetSDH}
+%\input{sectionSonetSDH}
+
+A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação, com foco na transmissão ótica. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto as recomendações ITU-T G.691, ITU-T G.707 e ITU-T G.781 são exemplos relacionados ao padrão SDH.
+
+SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas mas, por exemplo, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
+
+\begin{itemize}
+
+\item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre o \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2010}.
+
+\item{\bf Informações de Gerenciamento:} Os padrões SONET e SDH oferecem maiores recursos de monitoramento, gerenciamento e controle do que está presente nas redes PDH. Como será visto mais adiante, o \textit{frame} dos padrões SONET e SDH oferecem campos específicos a atividade de monitoramento e gestão da comunicação.
+
+\item{\bf Interoperabilidade:} É difícil tratar de conceitos de telecomunicações sem levar em consideração um dos princípios básicos dessa área que é a Interoperabilidade. Anteriormente foi mencionado que isto era um problema nos sistemas PDH, pois diferentes fornecedores de equipamentos utilizavam interfaces e codificações distintas, dificultando a compatibilidade ao longo da rede. SONET e SDH são padrões que tentam eliminar este problema por meio da definição de parâmetros padrões, como as interfaces.
+
+\item{\bf Disponibilidade da rede:} SONET e SDH são padrões que evoluíram para acomodar específicas topologias de rede e técnicas de proteção e protocolos associados para possibilitar altos níveis de disponibilidade. Como consequência, a atuação da proteção é em geral mais rápida do que nas redes PDH. 
+
+
+\end{itemize} 
+
+A seguir, serão abordadas características importantes referentes a SDH. Porém, os conceitos também se aplicam ao padrão SONET, visto que SDH foi desenvolvido a partir do mesmo.
+
+\subsection{Multiplexação SONET}
+
+Ambos SONET e SDH usam métodos de multiplexação bastante sofisticados que podem ser implementados em circuitos integrados de longa escala. Comparando a figura \ref{fig:muxSDH} com a figura \ref{fig:muxPDH}, é possível notar a diferença de complexidade entre as redes SONET/SDH e PDH. Somente um componente é necessário para fazer o que a ``montanha de multiplexadores'' faz no PDH.
+
+Para SONET a taxa de sinal básica é $51,84 \, Mb/s$, chamada de \textit{synchronous transport signal level-1} ou STS-1. As outras taxas derivadas desta são chamadas STS-N e são obtidas alternando os bytes de N  \textit{frames} STS-1 alinhados. Como os \textit{clocks} dos sinais são sincronizados, não há necessidade de inserção de bits. Por esse mesmo motivo, sinais de taxas menores podem ser extraídos de um fluxo multiplexado sem necessidade de demultiplexar o sinal inteiro. A tabela \ref{tab:taxasSONET} traz as taxas de transmissão e nomenclatura SONET.
+
+\begin{figure}[!htb]
+\centering
+\includegraphics[width=0.7\textwidth]{image/mux_sonet.eps}
+\caption{\label{fig:muxSDH} Estrutura de multiplexação SONET. Adaptado de \cite{Ramaswami2010}.}
+\end{figure}
+
+\begin{table}[!htb]
+\centering
+\begin{tabular}{c|c}
+\hline
+Nomenclatura & Taxa de Bit (Mb/s) \\\hline
+STS-1 & $51,84$ \\
+STS-3 & $155,52$ \\
+STS-12 & $622,08$ \\
+STS-24 & $1244,16$ \\
+STS-48 & $2488,32$ \\
+STS-192 & $9953,28$ \\
+STS-768 & $39.814,32$ \\\hline
+\end{tabular}
+\caption{\label{tab:taxasSONET} As taxas de transmissão SONET e as nomenclaturas associadas às mesmas. Adaptado de \cite{Ramaswami2010}.}
+\end{table}
+
+Em SONET, os fluxos de dados de taxa inferior a STS-1 são mapeados em \textit{Virtual Tributaries} ou VTs. Os VTs são divididos em quatro tamanhos: VT1.5, VT2, VT3 e VT6, que acomodam fluxos assíncronos e plesiócronos de $1,5$, $2$, $3$ e $6 \, Mb/s$, respectivamente. Esses VTs são agrupados em um grupo VT que podem ter quatro VT1.5, três VT2, dois VT3 ou um único VT6. Cada grupo é, então, intercalado byte-a-byte junto com um junto de \textit{overheads} de caminho para formar o SONET SPE (\textit{synchronous payload envelope}) básico. A figura \ref{fig:vt} mostra graficamente como funciona a hierarquia SONET. 
+
+Para camadas clientes (de maior abstração), como IP ou Ethernet, que tem tamanho de pacotes grandes, é usada a nomenclatura STS-Nc, em que o "c" denomina "concatenado". 
+
+\begin{figure}[!htb]
+\centering
+\includegraphics[width=1\textwidth]{image/vt.eps}
+\caption{\label{fig:vt}\textit{Virtual Tributaries}. Adaptado de \cite{Ramaswami2010}.}
+\end{figure}
+
+\subsection{Multiplexação SDH}
+
+Para SDH, a taxa básica é $155 \, Mb/s$ e é chamada STM-1 (\textit{synchronous transport module-1}). Que foi escolhido para acomodar as taxas PDH mais utilizadas (DS1 e DS3). A tabela \ref{tab:taxasSDH} mostra as taxas de transmissão definidas para SDH.
+
+\begin{table}[!htb]
+\centering
+\begin{tabular}{c|c} \hline
+SDH & Taxa de Bit (Mb/s) \\\hline
+STM-1 & $155,52$ \\
+STM-4 & $622,08$ \\
+STM-16 & $2488,32$ \\
+STM-64 & $9953,28$ \\
+STM-256 & $39814,32$ \\\hline
+\end{tabular}
+\caption{\label{tab:taxasSDH} As taxas de transmissão SDH e as nomenclaturas associadas às mesmas. Notar que existem taxas definidas para SONET que não existem em SDH.}
+\end{table}
+
+Em SDH, os \textit{Virtual Containers} (VCs) fazem o mesmo trabalho dos VTs em SONET. Os VCs tem quatro tamanhos: VC-11, VC-12, VC-2, VC-3 e VC-4, que carregam fluxos de $1,5$, $2$, $6$, $45$ e $140 \, Mb/s$. Diferentemente de SONET, em SDH tem-se uma hierarquia em dois estágios em que VC-11, VC-12 e VC-2 podem ser multiplexados em VC-3 e VC-3 e VC-4 podem ser multiplexados em sinais STM-1.
+
+\subsection{Estrutura do \textit{frame} SDH}
+
+Uma das principais características do \textit{frame} SDH é sua bidimensionalidade, já que tal \textit{frame} é definido por uma quantidade de linhas e colunas como ilustrado na Figura~\ref{fig:FrameSDH}. O \textit{frame} SDH possui um número fixo de linhas e um número de colunas dependente da hierarquia SDH a que se está referenciando. De forma mais precisa, tal \textit{frame} possui 9 linhas e 270 x N colunas, onde N é o termo dependente da hierarquia e que pode ser obtido observando que as hierarquias são definidas seguindo o padrão \ac{STM}-N, para N igual a 1, 4, 16, 64 e 256 e é interessante ressaltar que para o caso STM-0 existem apenas 9 linhas e 90 colunas como já indicado na Figura~\ref{fig:FrameSDH}, correspondendo ao \textit{frame} STS-1 do padrão SONET. Cada linha nesta estrutura é tratada como um \textit{bit} enquanto cada coluna é tratada como um \textit{byte}. Outra característica importante é que independentemente do tamanho e consequentemente do número de bits do \textit{frame}, sua duração é sempre de 125 \(\mu s\), representando uma taxa de repetição de 8000 kHz herdada dos antigos sistemas PDH. Nessa estrutura, os bits são transmitidos, da esquerda para a direita, em cada linha até se alcançar o fim do \textit{frame}.
+
+\begin{figure}[!htb]
+ \centering
+ \includegraphics[scale=.6]{FrameSDH.png}
+  \caption{Estrutura do \textit{frame} SDH - ITU-T G.707~\cite{G707}.}
+ \label{fig:FrameSDH}
+\end{figure}
+
+O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalho ou \textit{overhead}, que é composto por 9 x N colunas (sendo N o nível da hierarquia) e 9 linhas e o \textit{payload}, composto por 261 x N colunas e 9 linhas. O \textit{payload} é a parte onde os dados dos clientes são inseridos para a transmissão. O cabeçalho, por sua vez, contém as informações do quadro \ac{STM}-N referentes a desempenho, manutenção, monitoramento e indicações das localidades dos tributários multiplexados nos \textit{frames}, além de funções operacionais, permitindo uma gerência maior por parte dos nós da rede. Esta parte do \textit{frame} se subdivide em duas unidades básicas, a primeira delas sendo chamada de \ac{SOH} e a segunda de \textit{Administrative Unit Pointers}. É interessante ressaltar que \ac{SOH} ainda é separado em duas partes, sendo elas \ac{RSOH} e \ac{MSOH}, gerando a estrutura ilustrada na Figura~\ref{fig:OverheadSDH} para o cabeçalho. A seguir, apresenta-se uma breve descrição das funcionalidade contidas em cada uma das partes mencionadas:
+
+\begin{figure}[!htb]
+ \centering
+ \includegraphics[scale=.7]{OverheadSDH.png}
+  \caption{RSOH e MSOH - ITU-T G.707~\cite{G707}.}
+ \label{fig:OverheadSDH}
+\end{figure}
+
+\begin{itemize}
+
+\item{\bf \ac{SOH}:} Esta seção se divide em duas partes, como indicado a seguir:
+
+\subitem{\bf \ac{RSOH}:} Parte do cabeçalho que é processada em cada nó destinado a regeneração. De forma mais específica, essa é uma região do quadro SDH que contém informações que permitem o alinhamento e identificação de \textit{frame}, monitoramento de erro de regeneração, alarmes físicos externos ao equipamento e supervisão de sistema.
+ 
+\subitem{\bf \ac{MSOH}:} Parte do cabeçalho que é apenas processada em equipamentos onde existe inserção ou retiradas de canais multiplexados. Inclui informações de monitoramento e indicação de erros de multiplexação, controle de chaveamento de mecanismos de proteção, monitoramento de sincronismo e gerência de sistema.
+
+\item{\bf \textit{Administrative Unit Pointers}:} Esta é uma parte do cabeçalho destinada a prover informações de posição dos dados dos clientes que foram multiplexados para formarem o \textit{frame} SDH. Possui indicação de onde se localiza o primeiro \textit{byte} dos \ac{VC} dentro da área de informação útil (\textit{payload}) e também pode conter \textit{bytes} provenientes de justificação dos \ac{VC}s. É uma parte do cabeçalho processada em cada equipamento da rede
+
+\end{itemize}
+
+\subsection{Camadas de SDH}
+
+A tecnologia SDH apresenta uma estruturação em camadas como apresentada na Figura~\ref{fig:SDHlayers}. Através de tal figura pode ser percebido que SDH possui quatro camadas, sendo elas a Camada de Via (\textit{Path layer}), Camada de Seção de Multiplexação (\textit{Multiplex Section Layer}), Camada de Seção de Regeneração (\textit{Regeneration Section Layer}) e Camada Física (\textit{Physical Layer}). Com exceção da Camada Física, as camadas possuem um conjunto de \textit{bytes} no \textit{Overhead} a que são relacionados e que são utilizadas para a realização de diversas funcionalidades, como avaliação de desempenho~\cite{Alwayn2004}.
+
+O conceito de via em SDH se refere a uma conexão lógica entre o ponto em que se monta o quadro SDH padrão, pela inserção de tributários e o ponto em que o quadro SDH padrão é desmontado, pela retirada de tributários, ou seja, se relaciona a uma conexão lógica fim-a-fim. A montagem do quadro SDH consiste na ação de inserir os dados dos clientes nas estruturas denominadas de \textit{Containers}, que consistem em unidades básicas de dados com bytes alocados para o transporte dos dados de mais baixas taxas dos clientes, por exemplo pode ser um sinal E1 da hierarquia PDH e associar a esses \textit{Containers} rótulos denominados de \ac{POH} com informações de controle. O processo de desmontagem realiza caminho inverso, retirando o \ac{POH} e o utilizando como informação para dar seguimento ao conteúdo dos \textit{Containers}. A Camada de Via é justamente responsável por realizar tais atividades e está relacionada à conexão fim-a-fim entre nós SDH onde se monta e desmonta o \textit{frame}. É possível que nós intermediários da rede possam realizar monitoramento de performance dos sinais da Camada de Via, porém, os \textit{bytes} de cabeçalho referentes a essa camada são somente iniciados do ponto de montagem e terminados no ponto de desmontagem do quadro SDH, por exemplo, nos \ac{TM}
+
+\begin{figure}[!htb]
+ \centering
+ \includegraphics[scale=.7]{SDHlayers.png}
+  \caption{Estruturação em Camadas de SDH - ~\cite{BernalFilho2003}.}
+ \label{fig:SDHlayers}
+\end{figure}
+
+O processo descrito anteriormente é indicado na Figura~\ref{fig:SDHlayers}, onde se indica que os dados provenientes da Camada de Circuitos são inseridos em \ac{VC}s. E como também pode ser analisado, a Camada de Via se divide em Via de Baixa Ordem e Via de Alta Ordem. A diferença básica entre estas duas estruturas consiste no fato de que na Via de Baixa Ordem, dados são inseridos em \textit{Containers} de menor tamanho e na Via de Alta Ordem, os \textit{Containers} podem carregar mais de um \ac{VC} anteriormente montado ou carregar dados de clientes que sejam de mais altas taxas de transmissão.
+
+A Camada de Seção de Multiplexação é responsável por multiplexar um número de conexões da Camada de Via em um único link (meio de transmissão) entre dois nós. Assim, os \textit{bytes} de cabeçalho referentes a essa camada são acessados e processados em cada elemento da conexão responsável por realizar multiplexação. Por exemplo, a camada em questão é acessada nos \ac{TM}s e nos \ac{ADM}s.
+
+Por sua vez, a Camada de Seção de Regeneração é utilizada entre elementos adjacentes de um link \ac{SDH}, ou seja, ela é utilizada para o processamento dos \textit{frames} em todos os equipamentos da rede, sejam eles de passagem, extração ou inserção dos tributários~\cite{BernalFilho2003}. A Figura~\ref{fig:SDHlayersConection} apresenta a relação das camadas e dos diversos dispositivos presentes em uma rede, assim como descrito anteriormente. Esta Figura utiliza a mesma nomenclatura anteriormente descrita e insere um dispositivo específico de regeneração do \textit{frame}, referenciado na Figura~\ref{fig:SDHlayersConection} como \ac{REG}. 
+
+\begin{figure}[!htb]
+ \centering
+ \includegraphics[scale=.7]{SDHlayersConection.png}
+  \caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - ~\cite{BernalFilho2003}.}
+ \label{fig:SDHlayersConection}
+\end{figure} 
+
+A Camada Física diz respeito a infraestrutura de conexões que permite a transmissão dos \textit{frames}. Para o caso das Comunicações Ópticas, a Camada Física engloba todos os dispositivos ópticos envolvidos na transmissão na fibra óptica, como por exemplo \textit{lasers} e fotodetectores. É interessante ressaltar que o processamento dos \textit{frames} \ac{SDH} ocorre no domínio elétrico e por isso, esta camada também é responsável por adequar a transmissão dos \textit{frames} que originalmente estão no domínio elétrico através do meio de transmissão que se está utilizando. Continuando o exemplo relacionado as Comunicações Ópticas, a Camada Física define interfaces que permitem realizar a transmissão e recepção através das fibras ópticas com a utilização de dispositivos ópticos como \textit{lasers} e fotodetectores. O \ac{ITU-T} define interfaces físicas para a transmissão sobre fibras ópticas para SDH nas recomendações G.957 e G.691. Como exemplo, a Figura~\ref{fig:PhysicalSDH} ilustra estas interfaces, definindo os tipos de fibras, atenuações e dispersões aceitáveis do enlace e tipos de transmissores com relação ao comprimento de onda de operação, taxa de transmissão e comprimento do enlace.
+
+\begin{figure}[!htb]
+ \centering
+ \includegraphics[scale=.5]{PhysicalSDH.png}
+  \caption{Diferentes Interfaces Físicas para SDH - ~\cite{Ramaswami2010}.}
+ \label{fig:PhysicalSDH}
+\end{figure}
+
+Na Figura~\ref{fig:PhysicalSDH}, a primeira coluna referencia a taxa de transmissão de acordo com a hierarquia \ac{SDH}. A segunda coluna introduz uma nomenclatura que depende do comprimento do enlace, de acordo com as definições a seguir: \textit{Intraoffice Connections} é representado pela letra "I" e indica distâncias de aproximadamente 2 km; \textit{Short-haul Interoffice Connections}, que indica enlaces de distância de aproximadamente 15 km para o comprimento de onda de 1310 nm e 40 km para comprimento de onda de 1550 nm, é representada pela letra "S"; \textit{Long-haul Interoffice Connections}, representada pela letra "L" e corresponde a distância de aproximadamente 40 km para o comprimento de onda de 1310 nm e 80 km para o comprimento de onda de 1550 nm; \textit{Very-long-haul Interoffice Connections}, indicado pela letra "V" correspondendo a distância de aproximadamente 60 km para comprimento de onda de 1310 nm e 120 km para comprimento de onda de 1550 nm; \textit{Ultra-long-haul Interoffice Connections}, representado pela letra "U" e correspondendo a distâncias aproximadas de 160 km. O primeiro número após as letras indicam a qual hierarquia se está relacionando e o segundo número indica o tipo de fibra e comprimento de onda de operação: 1 indica operação em 1310 nm sobre \textit{Standard Single-Mode Fiber} (\ac{ITU-T} G.652), 2 indica operação em 1550 nm sobre \textit{Standard Single-Mode Fiber} (\ac{ITU-T} G.652), 3 indica operação em 1550 nm sobre \textit{Dispersion-shifted Fiber} (\ac{ITU-T} G.653) e 5 indica operação em 1550 nm e sobre \textit{Nonzero Dispersion-shifted Fiber} (\ac{ITU-T} G.655)~\cite{Ramaswami2010}. 
+
+As outras colunas especificam o comprimento de onda de operação do transmissor, que pode ser em 1310 nm ou 1550 nm, o tipo de fibra óptica a se utilizar, que pode ser \textit{Standard Single-Mode Fiber} (\ac{ITU-T} G.652), \textit{Dispersion-shifted Fiber} (\ac{ITU-T} G.653) e \textit{Nonzero Dispersion-shifted Fiber} (\ac{ITU-T} G.655), o range de perda aceitável, os tipos de transmissores, que podem ser \ac{LED}, \ac{MLM} ou \ac{SLM} e o range de dispersão aceitável. É interessante ressaltar que ambos os ranges aceitáveis de perda e dispersão são ditados pela aplicação.
