--- a/referencias.bib
+++ b/referencias.bib
@@ -398,6 +398,18 @@
   Timestamp                = {2010.03.18}
 }
 
+@Misc{G781,
+  Title                    = {{Synchronization Layer Functions}},
+
+  Author                   = {{ITU-T}},
+  HowPublished             = {Recommendation ITU-T G.781},
+  Month                    = jun,
+  Year                     = {1999},
+
+  Owner                    = {alaelson},
+  Timestamp                = {2010.03.18}
+}
+
 @Misc{ITUT1998,
   Title                    = {{Optical Interfaces for Multichannel Systems with Optical Amplifiers}},
 
@@ -722,6 +734,22 @@
   Owner                    = {alaelson},
   Timestamp                = {2010.02.18},
   Url                      = {http://cp.literature.agilent.com/litweb/pdf/5988-3655EN.pdf}
+}
+
+@incollection{Zhang2001,
+title = "Chapter 12 - Networking with Optics ",
+editor = "Yin, Francis T.S. YuSuganda JutamuliaShizhuo ",
+booktitle = "Introduction to Information Optics ",
+publisher = "Academic Press",
+edition = "",
+address = "San Diego",
+year = "2001",
+pages = "667 - 717",
+series = "Optics and Photonics",
+issn = "15575837",
+doi = "http://dx.doi.org/10.1016/B978-012774811-5/50012-8",
+url = "http://www.sciencedirect.com/science/article/pii/B9780127748115500128",
+author = "Lintao Zhang and Guohua Xiao and Shudong Wu"
 }
 
 @comment{jabref-meta: selector_publisher:}
